updated pom, Dockerfile and added Kubernetes support in deployment.yml

--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
 				<version>1.4.9</version>
 				<configuration>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<tag>v1</tag>
 				</configuration>
 			</plugin>
 
