--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>2.2.0.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.overjet</groupId>
+	<groupId>com.waqar</groupId>
 	<artifactId>spring-boot-poc</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-poc</name>
